[workspace]
resolver = "2"

# Add packages that generate binaries here
members = [
  "HidPkg/Crates/HidIo",
  "HidPkg/Crates/HiiKeyboardLayout",
  "HidPkg/UefiHidDxe",
  "HidPkg/UefiHidDxeV2",
  "MsCorePkg/HelloWorldRustDxe",
  "MsWheaPkg/Crates/MuTelemetryHelperLib"
]

# Add packages that generate libraries here
[workspace.dependencies]
HidIo = {path = "HidPkg/Crates/HidIo"}
hidparser = {version = "1"}
HiiKeyboardLayout = {path = "HidPkg/Crates/HiiKeyboardLayout"}
mu_pi = {version = "5"}
mu_rust_helpers = { version = "2" }
MuTelemetryHelperLib = {path = "MsWheaPkg/Crates/MuTelemetryHelperLib"}
RustAdvancedLoggerDxe = {path = "AdvLoggerPkg/Crates/RustAdvancedLoggerDxe"}
RustBootServicesAllocatorDxe = {path = "MsCorePkg/Crates/RustBootServicesAllocatorDxe"}
mu_uefi_boot_services = { version = "2" }

memoffset = "0.9.0"
num-traits = { version = "0.2", default-features = false}
num-derive = { version = "0.4", default-features = false}
r-efi = "5.0.0"
rustversion = "1.0.14"
spin = "0.9.8"
scroll = { version = "0.12", default-features = false, features = ["derive"]}
