[package]
name = "MuTelemetryHelperLib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mu_telemetry_helper_lib"
path = "src/lib.rs"

[dependencies]
boot_services = { workspace = true }
mu_pi = { workspace = true }
mu_rust_helpers = { workspace = true }
r-efi = { workspace = true }

[dev-dependencies]
boot_services = { workspace = true, features = ["mockall"] }
mockall = { version = "0.13.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
